--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 ext.virgoProjects = [
 	project(':game-api'),
 	project(':jenova'),
+	project(':game-engine'),
 ]
 
 ext.dockerProjects = [
