--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'game-api', 'jenova', 'game-engine', 'commands', 'server'
+include 'game-api', 'jenova', 'game-engine', 'commands', 'server', 'client'
