--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
-springframeworkVersion = 4.2.1.RELEASE
+springframeworkVersion = 4.2.4.RELEASE
+
+jacksonCoreVersion = 2.6.4
+jacksonAnnotationsVersion = 2.6.4
+jacksonDatabindVersion = 2.6.4
 
 # Eclipse Mars.1 bundle from Maven Central provided by Tycho
 # org.eclipse.osgi_3.10.101.v20150820-1432.jar
